# VITV-SnD

./: .gitignore  CMakeLists.txt  Drone.cpp  Drone.h  EXPLANATION_DOXYGEN.txt  Server.cpp  Server.h  Vector2D.cpp  Vector2D.h  color.cpp  color.h  config_manager.cpp  config_manager.h  geometric_algorithms.cpp  geometric_algorithms.h  geometry.cpp  geometry.h  glutWindow.cpp  glutWindow.h  main.cpp  read_file.cpp  readme.md  server.cpp  server.h  vector2d.cpp  vector2d.h
assets/: antenna.tga  drone.tga
config/: config_1.csv  default.csv
config_files/: default_config.csv  quad.csv  servers.csv  servers_mac.csv  triangles.csv
src/: Colors.cpp  Colors.h  Drone.cpp  Drone.h  HelperFile.cpp  HelperFile.h  MainWindow.cpp  MainWindow.h  MainWindowControls.cpp  Server.cpp  Server.h  Vector2.cpp  Vector2.h  Vector2D.cpp  Vector2D.h
voronoi/: VEdge.h  VPoint.h  Voronoi.cpp  Voronoi.h
